<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.ui.main.MainActivity">


    <ImageView
        android:scaleType="centerCrop"
        android:background="@drawable/orion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <ImageView
            android:src="@drawable/marvel_logo"
            android:layout_centerInParent="true"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>


        <ImageView
            android:src="@drawable/refresh"
            android:id="@+id/refresh"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>




    </RelativeLayout>


    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:fontFamily="@font/avg"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:text="@string/heroes_disponibles"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/heros_list"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_width="0dp"
        android:layout_height="220dp"/>




        <androidx.cardview.widget.CardView
            android:visibility="gone"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="4dp"
            android:id="@+id/detail_card"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="#323232"
            android:layout_width="match_parent"
            android:layout_height="250dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/large_pic"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"/>


                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/avg"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"/>


                <androidx.core.widget.NestedScrollView
                    android:layout_toRightOf="@id/large_pic"
                    android:fillViewport="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_toRightOf="@+id/large_pic"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <LinearLayout
                            android:layout_margin="4dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                android:textSize="14sp"
                                android:padding="4dp"
                                android:textColor="@color/marvel_blue"
                                android:fontFamily="@font/avg2"
                                android:text="@string/nombre_real"
                                android:layout_width="90dp"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/real_name"
                                android:text=""
                                android:fontFamily="@font/avg2"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>



                        </LinearLayout>

                        <LinearLayout
                            android:layout_margin="4dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                android:textSize="14sp"
                                android:padding="4dp"
                                android:textColor="@color/marvel_blue"
                                android:fontFamily="@font/avg2"
                                android:text="@string/poderes"
                                android:layout_width="90dp"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/power"
                                android:text=""
                                android:fontFamily="@font/avg2"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>



                        </LinearLayout>

                        <LinearLayout
                            android:layout_margin="4dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                android:textSize="14sp"
                                android:padding="4dp"
                                android:textColor="@color/marvel_blue"
                                android:fontFamily="@font/avg2"
                                android:text="@string/habilidades"
                                android:layout_width="90dp"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/abilities"
                                android:text=""
                                android:fontFamily="@font/avg2"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>



                        </LinearLayout>


                        <LinearLayout
                            android:layout_margin="4dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                android:textSize="14sp"
                                android:padding="4dp"
                                android:textColor="@color/marvel_blue"
                                android:fontFamily="@font/avg2"
                                android:text="@string/altura"
                                android:layout_width="90dp"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/height"
                                android:text=""
                                android:fontFamily="@font/avg2"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>



                        </LinearLayout>



                        <LinearLayout
                            android:layout_margin="4dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                android:textSize="14sp"
                                android:padding="4dp"
                                android:textColor="@color/marvel_blue"
                                android:fontFamily="@font/avg2"
                                android:text="@string/grupos"
                                android:layout_width="90dp"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/grupos"
                                android:text=""
                                android:fontFamily="@font/avg2"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>



                        </LinearLayout>







                    </LinearLayout>




                </androidx.core.widget.NestedScrollView>




            </RelativeLayout>



        </androidx.cardview.widget.CardView>







</RelativeLayout>